﻿Pulse Changelog

Pulse-4.8.0
 - Update Heatmap Plot.
 - Update Mark Bad Below Bottom.

Pulse-4.7.2
 - Update project pages with absorption prediction model.
 - Fix AutoUpdate to have a messagebox pop up when an update is available.

Pulse-4.7.1
 - Added Absorption to prediction model

Pulse-4.7.0
 - Fixed bug in Prediction Model with System Init Time.
 - Made the serial port not send a BREAK at startup for the ADCP.

Pulse-4.6.1
 - Fixed bug with DVL codecs not being initialized.
 - Fixed bug with Burst power calculation.
 - In NavBarViewModel, in LoadFiles() first check if its a binary file, then try all codec types.   
 - In SelectPlaybackViewModel, made File playback match NavBarViewModel's file playback.  

Pulse-4.6.0
 - Fixed bug in Prediction Model for burst data storage calculations.
 - Store the options for the Data Output View.

Pulse-4.5.7
 - Added ENS export option in ExportDataViewModel.

Pulse-4.5.6
 - Reduce the startup time by removing an image.

Pulse-4.5.5
 - Fixed bug in AutoUpdate if the internet did not work, the application would not start.

Pulse-4.5.4
  - Check if the website exists in AutoUpdate.
  - Handle UDP data in communication.
  - Removed SerialNumber generator for AddProjectVM.
  - In ScanAdcpViewModel, added SerialNumberGenerator to allow either scan or select. 

Pulse-4.5.3.1
  - Remove Ship Speed in DataOutputVM and WpMagDirOutputVM.

Pulse-4.5.3
  - Added BaseDataOutputView/VM.
  - Added WpMagDirOutputView/VM to output a special PD6 style message that contains mag and dir of water for selected bins.

Pulse-4.5.2.1
 - Fixed a bug with the DataOutputViewModel to output the data with a <CR><LF>

Pulse-4.5.2
 - Fixed data size in wizard for burst deployments in AdcpSubsystemConfigurationViewModel.
 - In AdcpConfiguration, fixed data size in wizard for burst deployment.
 - Fixed background and foreground colors for the numeric up/down boxes.
 - Added PredictionModel and PredicitonModelInput.
 - Added TCP and UDP server.