@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <html>
 	<head>
-		<title>Version 4.8.0 ChangeLog</title>
+		<title>Version 4.8.1 ChangeLog</title>
 		<style type="text/css">
 .auto-style1 {
 	text-decoration: underline;
@@ -10,7 +10,10 @@
 	</head>
 	<body>
         <p>
-            <br /><span class="auto-style1">Pulse-4.8.0</span>
+            <br /><span class="auto-style1">Pulse-4.8.1</span>
+            <br />   <br />   Pulse-4.8.1
+            <br />   - Added tooltips to special BREAK button in terminal and fixed the colors.
+            <br />
             <br />   Pulse-4.8.0
             <br />   - Update Heatmap Plot.
             <br />   - Update Mark Bad Below Bottom.
